--- a/manifests/deploy.smtp.yaml
+++ b/manifests/deploy.smtp.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: warehouse-smtp
+  name: smtp
   namespace: ${NAMESPACE:-pypi-test}
 spec:
   revisionHistoryLimit: 10
@@ -9,10 +9,10 @@ spec:
   template:
     metadata:
       labels:
-        name: warehouse-smtp
+        name: smtp
     spec:
       containers:
-        - name: warehouse-smtp
+        - name: smtp
           image: ${IMAGE_PREFIX}/${NAME}-src:${VERSION:latest}
           command: ["python", "/opt/warehouse/src/dev/smtp.py", "0.0.0.0:2525"]
           resources:
