--- a/manifests/deploy.rabbitmq.yaml
+++ b/manifests/deploy.rabbitmq.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: warehouse-rabbitmq
+  name: rabbitmq
   namespace: ${NAMESPACE:-pypi-test}
 spec:
   revisionHistoryLimit: 10
@@ -9,10 +9,10 @@ spec:
   template:
     metadata:
       labels:
-        name: warehouse-rabbitmq
+        name: rabbitmq
     spec:
       containers:
-        - name: warehouse-rabbitmq
+        - name: rabbitmq
           image: rabbitmq:latest
           resources:
             requests:
