--- a/manifests/deploy.redis.yaml
+++ b/manifests/deploy.redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: warehouse-redis
+  name: redis
   namespace: ${NAMESPACE:-pypi-test}
 spec:
   revisionHistoryLimit: 10
@@ -9,10 +9,10 @@ spec:
   template:
     metadata:
       labels:
-        name: warehouse-redis
+        name: redis
     spec:
       containers:
-        - name: warehouse-redis
+        - name: redis
           image: redis:latest
           resources:
             requests:
