Serve files from S3 using proxy

--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -12,7 +12,7 @@ data:
   CAMO_URL: "{request.scheme}://{request.domain}:9000/"
   CAMO_KEY: "insecure camo key"
   DOCS_URL: "https://pythonhosted.org/{project}/"
-  FILES_BACKEND: warehouse.packaging.services.S3FileStorage bucket=pypi-test url=http://files.example.com/packages/{path}
+  FILES_BACKEND: warehouse.packaging.services.S3FileStorage bucket=pypi-test url=https://pypi-test.jws.jpl.nasa.gov/files/{path}
   DOCS_BACKEND: warehouse.packaging.services.LocalDocsStorage path=/var/opt/warehouse/docs/
   MAIL_BACKEND: warehouse.email.services.SMTPEmailSender host=smtp port=2525 ssl=false sender=noreply@pypi.org
   STATUSPAGE_URL: https://2p66nmmycsj3.statuspage.io
