--- a/manifests/deploy.s3proxy.yaml
+++ b/manifests/deploy.s3proxy.yaml
@@ -23,7 +23,7 @@ spec:
             - name: AWS_S3_ROOT
               value: /
             - name: AWS_S3_BUCKET
-              value: pypi-test
+              value: ${S3_BUCKET}
             - name: AWS_DEFAULT_REGION
               valueFrom:
                 secretKeyRef:
