--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -9,7 +9,7 @@ data:
   AMQP_URL: amqp://guest@rabbitmq:5672//
   REDIS_URL: redis://redis:6379/0
   SESSION_SECRET: "an insecure development secret"
-  CAMO_URL: "{request.scheme}://{request.domain}:9000/"
+  CAMO_URL: "{request.scheme}://{request.domain}/camo/"
   CAMO_KEY: "insecure camo key"
   DOCS_URL: "https://pythonhosted.org/{project}/"
   FILES_BACKEND: warehouse.packaging.services.S3FileStorage bucket=${S3_BUCKET} url=/files/{path}
