--- a/manifests/ing.yaml
+++ b/manifests/ing.yaml
@@ -15,3 +15,7 @@ spec:
             backend:
               serviceName: s3proxy
               servicePort: 443
+          - path: /camo
+            backend:
+              serviceName: camo
+              servicePort: 443
