Explicitly set concurrenct of celery workers
Celery attempts to automatically determine optimal concurrency (number of worker threads) depending on how many cores are available to it. It doesn't seem to understand the CPU limits imposed on it by Docker/Kubernetes.

--- a/manifests/deploy.worker.yaml
+++ b/manifests/deploy.worker.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: worker
           image: ${IMAGE_PREFIX}/${NAME}-src:${VERSION:latest}
-          command: ["hupper", "-m", "celery", "-A", "warehouse", "worker", "-B", "-S", "redbeat.RedBeatScheduler", "-l", "info"]
+          command: ["hupper", "-m", "celery", "-A", "warehouse", "worker", "-B", "-S", "redbeat.RedBeatScheduler", "-l", "info", "-c", "1"]
           envFrom:
           - configMapRef:
               name: config
